# Serna-shop

./: .gitignore  COOKIE_MANAGEMENT_FEATURE.md  KOL_MANAGEMENT_GUIDE.md  SETUP_GUIDE.md
agent_sale_v3/: run.md
agent_sale_v3/agent_sale/: CRITICAL_ISSUE_NO_TOOL_CALLS.md  DOCS.md  QUICK_FIX_SUMMARY.md  README.md  TEST_CHECKLIST.md  TOOL_USAGE_FIX.md  pyproject.toml  setup_supabase_tables.sql  test_3_users.py  test_concurrent_users.py  test_llm_function_calling.py  test_minimal_agent.py  test_single_tool_call.py  test_tool_usage.py
agent_sale_v3/agent_sale/knowledge/: catalog.txt  hair_dryer_troubleshooting.md
agent_sale_v3/agent_sale/src/agent_sale/: api.py  crew.py  main.py  message_batcher.py  session_manager.py  supabase_storage.py
agent_sale_v3/agent_sale/src/agent_sale/config/: agents.yaml  tasks.yaml
agent_sale_v3/agent_sale/src/agent_sale/tools/: __init__.py  email_handoff_tool.py  hair_dryer_troubleshooting.py  simple_tools.py  supabase_product_search_tool.py  txt_search_tool.py
backend-data/: .env.example  .gitignore  API_GUIDE.md  QUICK_START.md  README.md  app.py  fix_tiktok_cookie.py  requirements.txt  run.md  supabase_client.py  supabase_schema.sql  test_cookie_status.py  update_cookies.py
backend-data/agent/: __init__.py  agent.py  skills.py
backend-data/docs/: AUTO_COOKIE_SUMMARY.md  CHANGE_ACCOUNT_GUIDE.md  COOKIE_GUIDE.md  TIKTOK_COOKIE_MANUAL.md
backend-data/kalodata/: auto_cookie.py  data_store.py  datakoc.py  exp_playwright.py  exp_playwright_api.py  process_all.py  upload_sheets.py
frontend-base/: tsconfig.tsbuildinfo
(+74 files in other folders)
