[project]
name = "agent_sale"
version = "0.1.0"
description = "agent_sale using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai==1.9.3",
    "crewai[litellm]==1.9.3",
    "google-genai",
    "supabase>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    # CrewAI 1.9.x depends on chromadb -> onnxruntime. On macOS x86_64, newer
    # onnxruntime builds often ship arm64-only wheels; this pin keeps the
    # project runnable on Intel Macs.
    "onnxruntime==1.17.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "pytest>=8.0.0",
]

[project.scripts]
agent_sale = "agent_sale.main:run"
run_crew = "agent_sale.main:run"
train = "agent_sale.main:train"
replay = "agent_sale.main:replay"
test = "agent_sale.main:test"
run_with_trigger = "agent_sale.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
